tests/snapshots/signature_parse__field_signature_object.snap
---
source: tests/signature_parse.rs
expression: field_signature
---
Field:
  field_type:
    Class:
      package_path: java/lang/
      class_name: Object
      type_arguments: []
      inner_classes: []

