tests/snapshots/signature_parse__signature_visitor.snap
---
source: test/signature_parse.rs
expression: class_signature
---
Class:
  formal_type_parameters:
    - parameter_name: V
      class_bound:
        package_path: java/lang
        class_name: Object
        type_arguments: []
        inner_classes: []
      interface_bounds: []
    - parameter_name: K
      class_bound: ~
      interface_bounds: []
  super_class:
    package_path: java/lang
    class_name: Object
    type_arguments: []
    inner_classes: []
  interfaces:
    - package_path: java/lang
      class_name: Runnable
      type_arguments: []
      inner_classes: []

